@@ -2,17 +2,17 @@
 Hash: SHA1
 
 AUX 50notmuch-gentoo.el 291 RMD160 7e036b8700f50cde6c3b27622193ddf08812229b SHA1 cc087fe76f750e84171a6ddef9dc10139b8450cc SHA256 68c0ecfd3d10246fb65ec48b097c1b477ce33f44014f602f903c16b752ba7d3b
-EBUILD notmuch-9999.ebuild 3215 RMD160 23325f8d3fa07e21e7100d95cf46e762fe1f8aaa SHA1 e832965ac306f2fc7b9698739906ab95203a7923 SHA256 d2cdc05697c6439d581bc7798324180a15c60c02490b35efb5c21ee93ac6384b
-MISC ChangeLog 732 RMD160 ecc5734d092a8a06914377ae53a4319f251ac2df SHA1 4d7061db9a35d13ca7b969051789a212b3ab8af1 SHA256 0fce868671a99fd314dad86408228c855cc9331eb121325bec41729ee000ccb7
-MISC metadata.xml 870 RMD160 1ea6d669111c3e30f719c2337bb1fbebe7ab14aa SHA1 49ddae312621716998b7fe205f93536b2c2d20b4 SHA256 37955cc892c0585089e4dfb7ea2a8d1cb819164c4d098ba1be7253929be9890f
+EBUILD notmuch-9999.ebuild 3238 RMD160 02898b3b01791a04c7cca155c34107c2a8186bc8 SHA1 fbbfd7a19e4f450ec30e4041a1380540f2241873 SHA256 6e70835080004ea7f181f404fe8dfb570f968deed1daee954bb911dc91fff361
+MISC ChangeLog 853 RMD160 46867c7719fa573960dfea1ec002fe53c914d4b8 SHA1 e82857e4307e05fa12f0a1315f3d8bd82749c04a SHA256 e3d364c222f02510b5c7a434f882503d38b3726d02833da50a2962bacd44ce72
+MISC metadata.xml 1003 RMD160 12fa19220fd58eade62c7aafc6a3c2bf5adb6ca5 SHA1 8be789b19b3140dc24694d5c535a7d8a4e8c4b0a SHA256 48f0e1b14cf9bd31f53f6bb481570ec1f067308e067913edbcea50a986b875bc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPHve6AAoJEPATRTHh2/q1U7UH/1ji3pEUJ5PYEL6BAZ1ZRsks
-2RxhkrFalIditvk8RyHYWqvLFntV4hX6riYk8sBO7b9MpfUdDSDJnueXacBW3c9k
-CySTC8shmCj+kuApTxfCcaMJ7tb+aAW7uRA62tLJaMRI7My76V3VpblPhWyzHvPI
-387lRjVC4jnf1D3KLc4TfmwtN/AgoIrOTTLb3JeJxXDB7Kw9gt+7fYgRYyfqZNZ3
-9og2SSScpuzYbhQ/5FsFLjH2+0XWwl7495VnQtf6OR/nZbXIQw2kaMb5pgx1Jyvs
-HHqoZ69ntwytqj1WgQN/B50GtF9Ha4PApwUsVLRRDagXAdBWWg1oggdS+wC7gAs=
-=AhGA
+iQEcBAEBAgAGBQJPQ/k9AAoJEPATRTHh2/q1FUoH/iwehtyvI0sUUrMCRuScECPJ
+17nzMGZXP1IZYzH1c0cbGFhdbCSmqLKLF7cD/ghADxPZWvUYrwCGNuCZY56MaYp0
+YMOnOqYE4FyrQ5b5X2OJL4Ml1oi8XVxa75RNTu91ZUITFdA9tjDkb7E2RtA+MyiC
+dfQJ8DNxJ18EkvA3PYvPm9crPZ6UZBpidaKfV0Bdet0khwCFaR6O6WvC77ZQI1a6
+lyMTGp24A7QlyOHCUwwp7ol2WYKRbM+fFCoDdVnD8zJ+2M2nUSpfdS2vL07+ZThi
+Gu8wsIsQAPQvZp/k6iBn10ZzMZ+b4kkV28tu01397S2oCMVk6BWGNjm6effdJTY=
+=iJHh
 -----END PGP SIGNATURE-----
