@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Feb 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild,
+  metadata.xml:
+  Added 'nmbug' USE flag.
+
   24 Jan 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
   Dropped autotools-utils. Using EAPI4 defaults. Builds with current HEAD, now.
 
